# axum-meter-readings

./: Cargo.toml  LICENSE
doc/: 20-axum-meter-values.conf  axum-meter-readings.service
meter-core/: Cargo.toml
meter-core/src/: data.rs  lib.rs  p1_meter.rs  pv2022.rs  ringbuffer.rs
meter-server/: Cargo.toml
meter-server/src/: blocking_task.rs  main.rs
src/: app_state.rs  blocking_task.rs  data.rs  lib.rs  main.rs  p1_meter.rs  ringbuffer.rs
