[package]
name = "meter-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
serde = { version = "1.0.218", features = ["serde_derive"] }
serde_json = "1.0"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
time = "0.3.39"
tower = "0.5.2"

# Local dependency to core:
meter-core = { path = "../meter-core" }