[package]
name = "meter-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.225", features = ["serde_derive"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4.42", features = ["clock"] }
tower = "0.5.2"

# Local dependency to core:
meter-core = { path = "../meter-core" }
